Formatting
Signed-off-by: sahil buddharaju <sahilbud@amazon.com>